Expand backend tests and cleanup files