@@ -1,24 +1,26 @@
 package com.omnicharge.notification.service;
 
-import com.omnicharge.common.exception.BadRequestException;
-import com.omnicharge.common.exception.ResourceNotFoundException;
+import com.omnicharge.notification.common.exception.BadRequestException;
+import com.omnicharge.notification.common.exception.ResourceNotFoundException;
+import com.omnicharge.notification.common.logging.LogEvent;
+import com.omnicharge.notification.common.logging.LogEventPublisher;
 import com.omnicharge.notification.dto.NotificationResponse;
-import com.omnicharge.notification.entity.*;
+import com.omnicharge.notification.entity.Notification;
+import com.omnicharge.notification.entity.NotificationCategory;
+import com.omnicharge.notification.entity.NotificationStatus;
+import com.omnicharge.notification.entity.NotificationType;
 import com.omnicharge.notification.repository.NotificationRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -28,205 +30,116 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class NotificationServiceTest {
 
-    @Mock
-    private NotificationRepository notificationRepository;
-
-    @Mock
-    private IEmailService emailService;
-
-    @Mock
-    private ISmsService smsService;
+    @Mock private NotificationRepository notificationRepository;
+    @Mock private IEmailService emailService;
+    @Mock private ISmsService smsService;
+    @Mock private LogEventPublisher logEventPublisher;
 
     @InjectMocks
     private NotificationService notificationService;
 
-    private Notification sampleNotification;
+    private Notification notification;
 
     @BeforeEach
     void setUp() {
-        sampleNotification = new Notification();
-        sampleNotification.setId(1L);
-        sampleNotification.setUserId(10L);
-        sampleNotification.setUserEmail("user@test.com");
-        sampleNotification.setUserMobile("9876543210");
-        sampleNotification.setType(NotificationType.EMAIL);
-        sampleNotification.setCategory(NotificationCategory.PAYMENT_SUCCESS);
-        sampleNotification.setSubject("Payment Confirmed");
-        sampleNotification.setMessage("Your payment was successful");
-        sampleNotification.setStatus(NotificationStatus.SENT);
-        sampleNotification.setReferenceId("TXN-1");
-        sampleNotification.setIsRead(false);
-        sampleNotification.setCreatedDate(LocalDateTime.now());
+        notification = new Notification();
+        notification.setId(1L);
+        notification.setUserId(10L);
+        notification.setType(NotificationType.EMAIL);
+        notification.setCategory(NotificationCategory.PAYMENT_SUCCESS);
+        notification.setStatus(NotificationStatus.SENT);
+        notification.setIsRead(false);
     }
-
-    // === createAndSendEmail Tests ===
 
     @Test
     void createAndSendEmail_Success() {
-        when(notificationRepository.save(any(Notification.class))).thenReturn(sampleNotification);
+        when(notificationRepository.save(any(Notification.class))).thenReturn(notification);
 
-        notificationService.createAndSendEmail(10L, "user@test.com", "Subject", "Body",
-                NotificationCategory.PAYMENT_SUCCESS, "TXN-1");
+        notificationService.createAndSendEmail(10L, "test@test.com", "Sub", "Body", NotificationCategory.PAYMENT_SUCCESS, "ref-1");
 
-        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
-        verify(notificationRepository).save(captor.capture());
-        assertEquals(NotificationType.EMAIL, captor.getValue().getType());
-        assertEquals(NotificationStatus.SENT, captor.getValue().getStatus());
-        assertEquals("TXN-1", captor.getValue().getReferenceId());
+        verify(notificationRepository, times(1)).save(any(Notification.class));
+        verify(logEventPublisher, times(1)).publish(any(LogEvent.class));
     }
 
     @Test
-    void createAndSendEmail_DbFailure_Rethrows() {
-        when(notificationRepository.save(any())).thenThrow(new RuntimeException("DB down"));
+    void createAndSendEmail_FailsToSave() {
+        when(notificationRepository.save(any(Notification.class))).thenThrow(new RuntimeException("DB Error"));
 
-        assertThrows(RuntimeException.class, () ->
-                notificationService.createAndSendEmail(10L, "u@t.com", "S", "B",
-                        NotificationCategory.PAYMENT_FAILED, "REF-1"));
+        assertThrows(RuntimeException.class, () -> 
+            notificationService.createAndSendEmail(10L, "test@test.com", "Sub", "Body", NotificationCategory.PAYMENT_SUCCESS, "ref-1")
+        );
     }
-
-    @Test
-    void createAndSendEmail_SetsIsReadFalse() {
-        when(notificationRepository.save(any(Notification.class))).thenAnswer(inv -> inv.getArgument(0));
-
-        notificationService.createAndSendEmail(10L, "u@t.com", "S", "B",
-                NotificationCategory.PLAN_EXPIRY_REMINDER, "R-1");
-
-        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
-        verify(notificationRepository).save(captor.capture());
-        assertFalse(captor.getValue().getIsRead());
-    }
-
-    // === createAndSendSms Tests ===
 
     @Test
     void createAndSendSms_Success() {
-        when(notificationRepository.save(any(Notification.class))).thenReturn(sampleNotification);
+        when(notificationRepository.save(any(Notification.class))).thenReturn(notification);
 
-        notificationService.createAndSendSms(10L, "9876543210", "Your recharge is done",
-                NotificationCategory.PAYMENT_SUCCESS, "TXN-2");
+        notificationService.createAndSendSms(10L, "9876543210", "Message", NotificationCategory.PAYMENT_SUCCESS, "ref-1");
 
-        verify(smsService).sendSms("9876543210", "Your recharge is done");
-        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
-        verify(notificationRepository).save(captor.capture());
-        assertEquals(NotificationStatus.SENT, captor.getValue().getStatus());
-        assertEquals(NotificationType.SMS, captor.getValue().getType());
+        verify(smsService, times(1)).sendSms("9876543210", "Message");
+        verify(notificationRepository, times(1)).save(argThat(n -> n.getStatus() == NotificationStatus.SENT));
     }
 
     @Test
-    void createAndSendSms_SmsFailure_StatusFailed() {
-        doThrow(new RuntimeException("Twilio error")).when(smsService).sendSms(anyString(), anyString());
-        when(notificationRepository.save(any(Notification.class))).thenAnswer(inv -> inv.getArgument(0));
+    void createAndSendSms_SmsFailureThrowsErrorButSavesFailedStatus() {
+        doThrow(new RuntimeException("Twilio down")).when(smsService).sendSms("9876543210", "Message");
+        when(notificationRepository.save(any(Notification.class))).thenReturn(notification);
 
-        notificationService.createAndSendSms(10L, "9876543210", "msg",
-                NotificationCategory.PAYMENT_FAILED, "TXN-3");
+        notificationService.createAndSendSms(10L, "9876543210", "Message", NotificationCategory.PAYMENT_SUCCESS, "ref-1");
 
-        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
-        verify(notificationRepository).save(captor.capture());
-        assertEquals(NotificationStatus.FAILED, captor.getValue().getStatus());
+        verify(smsService, times(1)).sendSms("9876543210", "Message");
+        verify(notificationRepository, times(1)).save(argThat(n -> n.getStatus() == NotificationStatus.FAILED));
+        // Expecting 2 log events: SMS_FAILED and NOTIFICATION_CREATED
+        verify(logEventPublisher, times(2)).publish(any(LogEvent.class));
     }
 
     @Test
-    void createAndSendSms_DbFailure_Rethrows() {
-        when(notificationRepository.save(any())).thenThrow(new RuntimeException("DB Crash"));
-
-        assertThrows(RuntimeException.class, () ->
-                notificationService.createAndSendSms(10L, "9876543210", "msg",
-                        NotificationCategory.PAYMENT_SUCCESS, "R-1"));
-    }
-
-    @Test
-    void createAndSendSms_SetsEmptyEmailForSms() {
-        when(notificationRepository.save(any(Notification.class))).thenAnswer(inv -> inv.getArgument(0));
-
-        notificationService.createAndSendSms(10L, "9876543210", "msg",
-                NotificationCategory.PAYMENT_SUCCESS, "R-1");
-
-        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
-        verify(notificationRepository).save(captor.capture());
-        assertEquals("", captor.getValue().getUserEmail());
-    }
-
-    // === getUserNotifications Tests ===
-
-    @Test
-    void getUserNotifications_ReturnsMappedPage() {
-        Page<Notification> page = new PageImpl<>(Collections.singletonList(sampleNotification));
-        when(notificationRepository.findByUserId(eq(10L), any(Pageable.class))).thenReturn(page);
+    void getUserNotifications_Success() {
+        Page<Notification> p = new PageImpl<>(List.of(notification));
+        when(notificationRepository.findByUserId(10L, PageRequest.of(0, 10))).thenReturn(p);
 
         Page<NotificationResponse> result = notificationService.getUserNotifications(10L, PageRequest.of(0, 10));
 
-        assertFalse(result.isEmpty());
-        assertEquals("TXN-1", result.getContent().get(0).getReferenceId());
-        assertEquals(NotificationType.EMAIL, result.getContent().get(0).getType());
+        assertEquals(1, result.getContent().size());
     }
-
-    @Test
-    void getUserNotifications_EmptyPage() {
-        Page<Notification> emptyPage = new PageImpl<>(Collections.emptyList());
-        when(notificationRepository.findByUserId(eq(99L), any(Pageable.class))).thenReturn(emptyPage);
-
-        Page<NotificationResponse> result = notificationService.getUserNotifications(99L, PageRequest.of(0, 10));
-
-        assertTrue(result.isEmpty());
-    }
-
-    // === markAsRead Tests ===
 
     @Test
     void markAsRead_Success() {
-        when(notificationRepository.findById(1L)).thenReturn(Optional.of(sampleNotification));
-        when(notificationRepository.save(any())).thenReturn(sampleNotification);
+        when(notificationRepository.findById(1L)).thenReturn(Optional.of(notification));
 
         notificationService.markAsRead(1L, 10L);
 
-        assertTrue(sampleNotification.getIsRead());
-        verify(notificationRepository).save(sampleNotification);
+        assertTrue(notification.getIsRead());
+        verify(notificationRepository, times(1)).save(notification);
+    }
+
+    @Test
+    void markAsRead_Unauthorized() {
+        when(notificationRepository.findById(1L)).thenReturn(Optional.of(notification));
+
+        assertThrows(BadRequestException.class, () -> notificationService.markAsRead(1L, 99L));
     }
 
     @Test
     void markAsRead_NotFound() {
-        when(notificationRepository.findById(999L)).thenReturn(Optional.empty());
+        when(notificationRepository.findById(1L)).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () ->
-                notificationService.markAsRead(999L, 10L));
+        assertThrows(ResourceNotFoundException.class, () -> notificationService.markAsRead(1L, 10L));
     }
 
     @Test
-    void markAsRead_UnauthorizedUser() {
-        when(notificationRepository.findById(1L)).thenReturn(Optional.of(sampleNotification));
-
-        assertThrows(BadRequestException.class, () ->
-                notificationService.markAsRead(1L, 99L));  // userId mismatch
-    }
-
-    // === getUnreadCount Tests ===
-
-    @Test
-    void getUnreadCount_ReturnsCorrect() {
+    void getUnreadCount_Success() {
         when(notificationRepository.countByUserIdAndIsRead(10L, false)).thenReturn(5L);
 
-        long count = notificationService.getUnreadCount(10L);
-
-        assertEquals(5L, count);
+        assertEquals(5L, notificationService.getUnreadCount(10L));
     }
 
     @Test
-    void getUnreadCount_ZeroForNoNotifications() {
-        when(notificationRepository.countByUserIdAndIsRead(10L, false)).thenReturn(0L);
+    void getAllNotifications_UserCategory() {
+        Page<Notification> p = new PageImpl<>(List.of(notification));
+        when(notificationRepository.findByCategoryIn(anyList(), any())).thenReturn(p);
 
-        assertEquals(0L, notificationService.getUnreadCount(10L));
-    }
-
-    // === getAllNotifications Tests ===
-
-    @Test
-    void getAllNotifications_ReturnsMappedPage() {
-        Page<Notification> page = new PageImpl<>(Collections.singletonList(sampleNotification));
-        when(notificationRepository.findAll(any(Pageable.class))).thenReturn(page);
-
-        Page<NotificationResponse> result = notificationService.getAllNotifications(PageRequest.of(0, 10));
-
-        assertFalse(result.isEmpty());
+        Page<NotificationResponse> result = notificationService.getAllNotifications("USER", PageRequest.of(0, 10));
         assertEquals(1, result.getContent().size());
     }
 }
